<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".more_page.profile.quest.WomanQuesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/ttfirsneue_medium"
            android:text="@string/kelinlikka_nomzod"
            android:textColor="#BE3DF4"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/woman_year"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edit_background"
            android:fontFamily="@font/tommy_soft_regular"
            android:gravity="center|start"
            android:padding="18dp"
            android:text="@string/yilingizni_kiriting"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/edit_background"
            android:focusable="false"
            app:boxBackgroundColor="@color/white"
            tools:ignore="RelativeOverlap">

            <AutoCompleteTextView
                android:id="@+id/woman_province"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/ttfirsneue_medium"
                android:gravity="center|start"
                android:inputType="none"
                android:text="@string/yashash_joy"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/millatingiz"
            android:padding="3dp"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="#74650D8A"
            app:hintTextColor="#74650D8A">

            <EditText
                android:id="@+id/woman_nation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ttfirsneue_medium"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/boyingiz"
            android:padding="3dp"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="#74650D8A"
            app:hintTextColor="#74650D8A">

            <EditText
                android:id="@+id/woman_tall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ttfirsneue_medium"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/vazningiz"
            android:padding="3dp"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="#74650D8A"
            app:hintTextColor="#74650D8A">

            <EditText
                android:id="@+id/woman_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ttfirsneue_medium"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/sogligingiz"
            android:padding="3dp"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="#74650D8A"
            app:hintTextColor="#74650D8A">

            <EditText
                android:id="@+id/woman_health"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ttfirsneue_medium"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/nechinchi_turmushingiz"
            android:padding="3dp"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="#74650D8A"
            app:hintTextColor="#74650D8A">

            <EditText
                android:id="@+id/woman_marriage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ttfirsneue_medium"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/ibodatdamisiz"
            android:padding="3dp"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="#74650D8A"
            app:hintTextColor="#74650D8A">

            <EditText
                android:id="@+id/woman_prayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ttfirsneue_medium"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/kasbingiz"
            android:padding="3dp"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="#74650D8A"
            app:hintTextColor="#74650D8A">

            <EditText
                android:id="@+id/woman_profession"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ttfirsneue_medium"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/ozingizni_shartingiz"
            android:padding="3dp"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="7dp"
            app:boxCornerRadiusBottomStart="7dp"
            app:boxCornerRadiusTopEnd="7dp"
            app:boxCornerRadiusTopStart="7dp"
            app:boxStrokeColor="#74650D8A"
            app:hintTextColor="#74650D8A">

            <EditText
                android:id="@+id/woman_condition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/ttfirsneue_medium"
                android:inputType="textCapWords"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="Autofill,LabelFor,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_on"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="20dp"
            android:background="@drawable/btn_button_woman"
            android:fontFamily="@font/ttfirsneue_regular"
            android:gravity="center"
            android:text="@string/yuborish"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/linear_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="20dp"
            android:visibility="gone"
            android:background="@drawable/radius_prog_woman"
            android:gravity="center">

            <com.clk.progress.CircularProgress
                android:id="@+id/circularProgress"
                android:layout_width="45dp"
                android:layout_height="45dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

</ScrollView>