<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/screen_image"
        android:layout_width="250sp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/screen_2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/screen_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ttfirsneue_medium"
        android:gravity="center"
        android:text="@string/screen_two"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/screen_text2"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ttfirsneue_regular"
        android:gravity="center"
        android:text="@string/screen_twos"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/circle_blank"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:src="@drawable/circle_filed"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/circle_blank"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/circle_blank"
                tools:ignore="ContentDescription" />

        </LinearLayout>


        <TextView
            android:id="@+id/screen_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/ttfirsneue_regular"
            android:onClick="nextPage"
            android:padding="10dp"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap,UsingOnClickInXml" />

    </RelativeLayout>

</LinearLayout>